--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wassup chat app</title>
+    <title>GoChat app</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <section class="chat__section">
         <div class="brand">
-            <img height="40" src="/wassup.png" alt="">
-            <h1>Wassup</h1>
+            <img height="40" src="/gochat.png" alt="">
+            <h1>GoChat</h1>
         </div>
         <div class="message__area"></div>
         <div>
-            <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
+            <textarea id="text_area" cols="30" rows="1" placeholder="Write a message..."></textarea>
         </div>
     </section>
     <script src="/socket.io/socket.io.js"></script>
